--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-        <meta charset="utf-8">
-        <title>Hello world!</title>
-        <link href="style.css" rel="stylesheet" />
-</head>
-<body>
-    <h1>Welcome {{name}}!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Home page{% endblock %}
+
+{% block content %}
+<h1>Welcome {{name}}!</h1>
+{% endblock %}
