--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,8 @@
 {% url 'train:home' as trains_home_url %}
 {% url 'cities:create' as cities_create_url %}
 {% url 'train:create' as trains_create_url %}
+{% url 'list' as route_list %}
+{% url 'detail' as route_detail %}
 
 <!doctype html>
 <html lang="en">
@@ -30,8 +32,8 @@
               <li class="nav-item">
                 <a class="nav-link {% if request.path == trains_home_url %} active {% endif %}" href="{% url 'trains:home' %}">Поезда</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+              <li class="nav-item {% if request.path == route_list or request.path == route_detail %}active{% endif %}">
+                <a class="nav-link" href="{% url 'list' %}">Маршруты</a>
               </li>
                 
               <li class="nav-item dropdown {% if request.path == cities_create_url or request.path == trains_create_url %}active{% endif %}">
