--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,6 @@
 {% url 'cities:create' as cities_create_url %}
 {% url 'train:create' as trains_create_url %}
 {% url 'list' as route_list %}
-{% url 'detail' as route_detail %}
 
 <!doctype html>
 <html lang="en">
@@ -32,7 +31,7 @@
               <li class="nav-item">
                 <a class="nav-link {% if request.path == trains_home_url %} active {% endif %}" href="{% url 'trains:home' %}">Поезда</a>
               </li>
-              <li class="nav-item {% if request.path == route_list or request.path == route_detail %}active{% endif %}">
+              <li class="nav-item {% if request.path == route_list %}active{% endif %}">
                 <a class="nav-link" href="{% url 'list' %}">Маршруты</a>
               </li>
                 
@@ -44,7 +43,15 @@
                   <li><a class="dropdown-item" href="{% url 'cities:create' %}">Новый город</a></li>
                   <li><a class="dropdown-item" href="{% url 'trains:create' %}">Новый поезд</a></li>
                 </ul>
-              </li>
+              {% if user.is_authenticated %}
+                </li>
+                  <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+                </li>
+              {% else %}
+                </li>
+                  <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
+                </li>
+              {% endif %}
             </ul>
           </div>
         </div>
