--- a/cities/templates/cities/home.html
+++ b/cities/templates/cities/home.html
@@ -11,6 +11,7 @@
                 <td>
                     <a href ="{% url 'cities:detail' pk=object.pk %}">{{ object.name }}</a>
                 </td>
+                {% if user.is_authenticated %}
                 <td>
                     <a href ="{% url 'cities:update' pk=object.pk %}">
                         <button type="submit" class="btn btn-primary">Редактировать</button></a>
@@ -19,13 +20,17 @@
                     <a href ="{% url 'cities:delete' pk=object.pk %}">
                         <button type="submit" class="btn btn-danger">Удалить</button></a>
                 </td>
+                {% else %}
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                {% endif %}
             </tr>
         {% endfor %}
     </table>
     </div>
 </div>
 
-<nav aria-label="Page navigation example">
+<nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
     
         <li class="page-item">
@@ -51,7 +56,7 @@
         </li>
     </ul>
   </nav>
-
+{% if user.is_authenticated %}
 <div class="row">
     <div class="col-md-4">
         <form action="{% url 'cities:create' %}" method="post"> {% csrf_token %}
@@ -60,4 +65,5 @@
         </form>
     </div>
 </div>
+{% endif %}
 {%endblock%}
