--- a/templates/base.html
+++ b/templates/base.html
@@ -24,32 +24,41 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a class="nav-link {% if request.path == cities_home_url %} active {% endif %}" href="{% url 'cities:home' %}">Города</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link {% if request.path == trains_home_url %} active {% endif %}" href="{% url 'trains:home' %}">Поезда</a>
               </li>
-              <li class="nav-item {% if request.path == route_list %}active{% endif %}">
+              <li class="nav-item {% if request.path == route_list %} active {% endif %}">
                 <a class="nav-link" href="{% url 'list' %}">Маршруты</a>
               </li>
-                
-              <li class="nav-item dropdown {% if request.path == cities_create_url or request.path == trains_create_url %}active{% endif %}">
+              {% if user.is_authenticated %}
+              <li class="nav-item dropdown {% if request.path == cities_create_url or request.path == trains_create_url %} active {% endif %}">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Добавить
                 </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="{% url 'cities:create' %}">Новый город</a></li>
-                  <li><a class="dropdown-item" href="{% url 'trains:create' %}">Новый поезд</a></li>
-                </ul>
-              {% if user.is_authenticated %}
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="{% url 'cities:create' %}">Новый город</a>
+                  <a class="dropdown-item" href="{% url 'trains:create' %}">Новый поезд</a>
+                </div>
+              {% else %}
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="">Добавить</a>
                 </li>
+              {% endif %}
+              </li>
+              {% if user.is_authenticated %}
+                <li>
                   <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
                 </li>
               {% else %}
-                </li>
+                <li>
                   <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="{% url 'accounts:registration' %}">Зарегистрироваться</a>
                 </li>
               {% endif %}
             </ul>
