--- a/trains/templates/trains/home.html
+++ b/trains/templates/trains/home.html
@@ -20,6 +20,7 @@
                 <td>{{ object.from_city }}</td>
                 <td>{{ object.to_city }}</td>
                 <td>{{ object.travel_time }}</td>
+                {% if user.is_authenticated %}
                 <td>
                     <a href ="{% url 'trains:update' pk=object.pk %}">
                         <button type="submit" class="btn btn-primary">Редактировать</button></a>
@@ -28,6 +29,10 @@
                     <a href ="{% url 'trains:delete' pk=object.pk %}">
                         <button type="submit" class="btn btn-danger">Удалить</button></a>
                 </td>
+                {% else %}
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                {% endif %}
             </tr>
         {% endfor %}
     </table>
